# graph-notebook

./: .dockerignore  .gitignore  CONTRIBUTING.md  ChangeLog.md  Config  Dockerfile  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.txt  build.sh  check_paths.py  cleanup.sh  graph_notebook_widgets.json  install.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setupbase.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker_publish.yml  integration.yml  neptune.yml  unit.yml
additional-databases/: .gitignore  README.md
additional-databases/blazegraph/: README.md
additional-databases/dbpedia/: README.md
additional-databases/fuseki/: README.md
additional-databases/graphdb/: README.md
additional-databases/gremlin-server/: README.md  gremlin-server-config.md
additional-databases/memgraph/: README.md
additional-databases/neptune/: README.md  neptune-ssh-config.md
additional-databases/sagemaker/: README.md  install-graph-notebook-lc-cn.sh  install-graph-notebook-lc.sh
additional-databases/sagemaker/neptune-notebook-cloudformation/: README.md  neptune-workbench-stack.yaml
additional-databases/sagemaker/sagemaker-notebook-lifecycle/: README.md  install-graph-notebook-lc-cn.sh  install-graph-notebook-lc.sh
docker/: Example-Remote-Server-Setup.ipynb  README.md  service.sh
scripts/: setup-blazegraph.sh  setup-gremlin-server.sh  start-gremlin-server.sh
src/graph_notebook/: __init__.py  schema_model.py  start_jupyterlab.py  start_notebook.py
src/graph_notebook/authentication/: iam_headers.py
src/graph_notebook/authentication/iam_credentials_provider/: credentials_factory.py  credentials_provider.py  ec2_metadata_credentials_provider.py  env_credentials_provider.py
src/graph_notebook/configuration/: generate_config.py  get_config.py
src/graph_notebook/decorators/: decorators.py
src/graph_notebook/formatters/gremlin/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  __init__.py  consts.py  recreate_formatted.py  recreate_oneliner.py  types.py  utils.py
src/graph_notebook/gremlin/: query.py  status.py
src/graph_notebook/gremlin/client_provider/: default_client.py  factory.py  graphsonV3d0_MapType_objectify_patch.py  iam_client.py
src/graph_notebook/ipython_profile/: configure_ipython_profile.py
src/graph_notebook/jupyter_profile/: jupyter_notebook_config.py
src/graph_notebook/jupyter_profile/custom/: custom.css
src/graph_notebook/loader/: load.py
src/graph_notebook/magics/: __init__.py  graph_magic.py  metadata.py  ml.py  schema.py  streams.py
src/graph_notebook/magics/parsing/: __init__.py  (+1 more)
src/graph_notebook/ml/: sagemaker.py
src/graph_notebook/nbextensions/: __init__.py  install.py
src/graph_notebook/neptune/: bolt_auth_token.py  client.py
src/graph_notebook/network/: EventfulNetwork.py  Network.py  __init__.py
src/graph_notebook/notebooks/: About-the-Neptune-Notebook.ipynb  Introduction-to-Identity-Graphs.ipynb  Overview.ipynb  install.py
src/graph_notebook/opencypher/: __init__.py  query.py  status.py  table.py
src/graph_notebook/options/: __init__.py  options.py
src/graph_notebook/request_param_generator/: call_and_get_response.py  default_request_generator.py  factory.py  iam_request_generator.py  sparql_request_generator.py
src/graph_notebook/seed/: load_query.py
src/graph_notebook/sparql/: query.py  status.py  table.py
src/graph_notebook/static_resources/: datatables.css  datatables.js  install.py  jquery-3.6.0.min.js  jquery.dataTables.min.css
src/graph_notebook/status/: get_status.py
src/graph_notebook/system/: database_reset.py
src/graph_notebook/visualization/: escape_reserved_characters.py  rows_and_columns.py  template_retriever.py  visualizer.py
src/graph_notebook/widgets/: .eslintignore  .eslintrc.js  LICENSE  README.md  __init__.py  _frontend.py  _version.py  graph_notebook_widgets.json  karma.conf.js  nohup.out  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.dev.config.js
test/cfn/: neptune-full-stack-with-nlb-and-lambda-updater.json  neptune_nlb_with_updater_lambda.json
test/integration/: DataDrivenGremlinTest.py  DataDrivenOpenCypherTest.py  DataDrivenSparqlTest.py  IntegrationTest.py  NeptuneIntegrationWorkflowSteps.py  __init__.py
test/integration/graph_notebook/: GraphNotebookIntegrationTest.py  test_graph_notebook_status.py  test_gremlin_graph_notebook.py  test_status_graph_notebook.py
test/integration/gremlin/: bug_fix_tests_without_iam.py  gremlin_query_with_iam.py  gremlin_query_without_iam.py  gremlin_status_with_iam.py  gremlin_status_without_iam.py
test/integration/notebook/: GraphNotebookIntegrationTest.py  test_gremlin_graph_notebook.py  test_opencypher_graph_notebook.py  test_sparql_graph_notebook.py  test_status_graph_notebook.py
test/integration/opencypher/: opencypher_query_with_iam.py  opencypher_query_without_iam.py  opencypher_status_with_iam.py  opencypher_status_without_iam.py
test/integration/sparql/: sparql_query_with_iam.py  sparql_query_without_iam.py  sparql_status_with_iam.py  sparql_status_without_iam.py
test/integration/status/: status_with_iam.py  status_without_iam.py
test/integration/system/: system_with_iam.py  system_without_iam.py
test/unit/configuration/: test_configuration.py  test_configuration_from_main.py
test/unit/graph_magic/: GraphNotebookTest.py  gremlin_profile_large_results_predicates.txt  gremlin_profile_sample_response.txt  metadata_gremlin_profile.py  test_cell_variable_injection.py  test_graph_magic.py  test_opencypher_metadata.py
test/unit/network/: test_eventful_network.py  test_network.py
test/unit/notebooks/: test_validate_notebooks.py
test/unit/options/: test_options.py
test/unit/request_param_generator/: test_default_request_generator.py  test_factory_generator.py  test_sparql_request_generator.py
test/unit/seed/: get_datasets_test.py  test_archive_validation.py
test/unit/sparql/: test_sparql.py
test/unit/visualization/: test_get_rows_and_columns.py
test/unit/widgets/: test_package_version.py
(+370 files in other folders)
